feat: add security and update project dependencies
